@startuml

' This is the PlantUML (https://plantuml.com/) source used to generate the UML
' diagram of the implementation hierarchy of the precondition system (hierarchy.png). Said
' diagram can be regenerated from this source at https://plantuml-editor.kkeisuke.com/ or with
' the PhpStorm plugin at https://plugins.jetbrains.com/plugin/7017-plantuml-integration.
' Optimize it with ImageOptim: https://imageoptim.com/.

!include settings.puml

hide circle

skinparam RoundCorner 15
skinparam LineType polyline

class BeginnerPreconditions {
    CommonPreconditions
    NoUnsupportedLinksExist
    StagingDirDoesNotExist
}
BeginnerPreconditions --o CommonPreconditions
BeginnerPreconditions --o NoUnsupportedLinksExist

class StagerPreconditions {
    CommonPreconditions
    StagingDirIsReady
}
StagerPreconditions --o CommonPreconditions
StagerPreconditions --o StagingDirIsReady

class CommitterPreconditions {
    CommonPreconditions
    NoUnsupportedLinksExist
    StagingDirIsReady
}
CommitterPreconditions --o CommonPreconditions
CommitterPreconditions --o NoUnsupportedLinksExist
CommitterPreconditions --o StagingDirIsReady

class CleanerPreconditions {
    CommonPreconditions
    StagingDirIsReady
}
CleanerPreconditions --o CommonPreconditions
CleanerPreconditions --o StagingDirIsReady

class CommonPreconditions {
    ActiveAndStagingDirsAreDifferent
    ActiveDirExists
    ActiveDirIsWritable
    ComposerIsAvailable
}

class StagingDirIsReady {
    StagingDirExists
    StagingDirIsWritable
}

class NoUnsupportedLinksExist {
    NoAbsoluteSymlinksExist
    NoHardLinksExist
    NoLinksExistOnWindows
    NoSymlinksPointOutsideTheCodebase
    NoSymlinksPointToADirectory
}

@enduml
